<?xml version="1.0"?>
<package>
  <name>adas_control</name>
  <version>0.0.1</version>
  <description>vv6 controller</description>
  <maintainer email="zhangqiang@gmail.com">zhangqiang</maintainer>
  <license>BSD</license>
  <author email="zhangqiang@gmail.com">zhangqiang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>location_msgs</build_depend>
  <run_depend>location_msgs</run_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>control_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>


  <export></export>
</package>
