<?xml version="1.0"?>
<package>
  <name>control_msgs</name>
  <version>1.0.0</version>
  <description>control_msgs</description>
  <maintainer email="xxx@gmail.com">xxx</maintainer>

  <license>BSD</license>
  <author >Xin Zhang</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
